<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_dashboard"/>
    <item
        android:id="@+id/nav_browse"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/nav_browse"/>
    <item
        android:id="@+id/nav_analytics"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="Analytics"/>
    <item
        android:id="@+id/nav_teams"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="Teams"/>
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile"/>
</menu>
